# fastapi-boilerplate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  commit-message.template
.gitlab/: CODEOWNERS
app/: .env.example  last_main.py  main.py  old_main.py
app/common/: __init__.py
app/core/: config.py
app/modules/: router.py
app/modules/auth/: config.py  models.py  service.py
app/modules/auth/api/: router.py
app/modules/auth/api/v1/: router.py
app/modules/auth/strategy/: jwt.py  key.py
dev/: Dockerfile  docker-compose-build.yml  docker-compose.yml  readme.md
dev/stuff/: _docker-cert  nginx.conf  start.sh
system/: README.md
system/backend/: fastapi-api.service
system/cert/: README.md  api-cert.service
system/nginx/: README.md  nginx.service
